welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: too many arguments for method estFaceMur: ()Boolean
while (estFaceMur(False))
                 ^